--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
-<!-- 		<dependency>
+ 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-		</dependency> -->
+		</dependency> 
 
 		<dependency>
 			<groupId>com.h2database</groupId>
